--- a/web/templates/clinica/index.html
+++ b/web/templates/clinica/index.html
@@ -11,15 +11,15 @@
         <hr class="divider divider-lg bg-primary">
         <div class="range offset-top-60">
             <div class="cell-md-4">
-                <div class="icon icon-xlg icon-rect icon-default icon-pills-xl"></div>
+                <div class="icon icon-xlg icon-rect icon-default icon-sillon-xl"></div>
                 <h5 class="text-bold text-primary">88 sillones dentales</h5>
             </div>
             <div class="cell-md-4 offset-top-50 offset-md-top-0">
-                <div class="icon icon-xlg icon-rect icon-default icon-doctor-xl"></div>
+                <div class="icon icon-xlg icon-rect icon-default icon-rayos-xl"></div>
                 <h5 class="text-bold text-primary">Unidad de Imagenología</h5>
             </div>
             <div class="cell-md-4 offset-top-50 offset-md-top-0">
-                <div class="icon icon-xlg icon-rect icon-default icon-medical-car-xl"></div>
+                <div class="icon icon-xlg icon-rect icon-default icon-doctor-xl"></div>
                 <h5 class="text-bold text-primary">2 Pabellónes de Cirugía Menor</h5>
             </div>
         </div>
