Se mejora el diseño e iconografia de carrera

--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -42,7 +42,8 @@
                                     <li><a href="/carrera/organigrama"><span class="text-middle">Organigrama</span></a>
                                     <li><a href="/carrera/objetivos"><span class="text-middle">Misión - Visión</span></a>
                                     <li><a href="/carrera/plan"><span class="text-middle">Plan Estudios</span></a></li>
-                                    <li><a href="/carrera/perfil"><span class="text-middle">Perfil Profesional</span></a></li>
+                                    <li><a href="/carrera/perfile"><span class="text-middle">Perfil Egresado</span></a></li>
+                                    <li><a href="/carrera/perfilp"><span class="text-middle">Perfil Profesional</span></a></li>
                                 </ul>
                             </li>
                             <li class="{% active_menu '^(/carrera/)(ad)([a-z]+)' %}"><a href="/carrera/admision"><span>Admisión</span></a></li>
