--- a/web/templates/clinica/base.html
+++ b/web/templates/clinica/base.html
@@ -30,7 +30,7 @@
         <header class="page-head">
             <!-- RD Navbar minimal-->
             {% block navegation %}{% include 'navegation.html' %}{% endblock %}
-            {% block swiper %}{% include 'carrera/swiper.html' %}{% endblock %}
+            {% block swiper %}{% include 'clinica/swiper.html' %}{% endblock %}
         </header>
         <!-- Page Contents-->
         <main class="page-content">
@@ -39,7 +39,7 @@
         <!-- Page Footer-->
         <!-- Default footer-->
         <footer class="section-relative section-34 section-md-66 page-footer bg-lighter context-light" id="footer-principal">
-                {% block footer %}{% include 'carrera/footer.html' %}{% endblock %}
+                {% block footer %}{% include 'clinica/footer.html' %}{% endblock %}
         </footer>
     </div>
     <!-- Java script-->
