--- a/web/templates/carrera/contacto.html
+++ b/web/templates/carrera/contacto.html
@@ -1,11 +1,11 @@
-{% extends "carrera/basecontenido.html" %} 
-{% load staticfiles %} 
+{% extends "carrera/basecontenido.html" %}
+{% load staticfiles %}
 
 {% block title %}Contáctenos{% endblock %} {% block content %}
 <!-- Modern Breadcrumbs-->
 <section class="breadcrumb-modern context-dark text-md-left">
     <div class="shell section-34 section-md-top-110 section-md-bottom-41">
-        <h1>Contactenos</h1>
+        <h1>Contáctenos</h1>
         <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
             <li><a href="index.html">Inicio</a></li>
             <li>Contacto</li>
@@ -89,7 +89,7 @@
                                                 <div class="icon icon-xxs text-middle mdi mdi-map-marker text-primary"></div>
                                             </div>
                                             <div class="unit-body">
-                                                <p><a href="#" class="text-gray-dark">2130 Fulton Street San Diego,<br>CA 94117-1080 USA</a></p>
+                                                <p><a href="#" class="text-gray-dark">Campus Ignacio Domeyko.<br>Benavente 980, La Serena.</a></p>
                                             </div>
                                         </div>
                                     </div>
@@ -119,8 +119,7 @@
                                                 <div class="icon icon-xxs text-middle mdi mdi-phone text-primary"></div>
                                             </div>
                                             <div class="unit-body">
-                                                <a href="callto:#" class="text-dark reveal-block">1-800-1234-567</a>
-                                                <a href="callto:#" class="text-dark reveal-block">1-800-7654-876</a>
+                                                <a href="callto:#" class="text-dark reveal-block">51 2 334658</a>
                                             </div>
                                         </div>
                                     </div>
@@ -133,7 +132,21 @@
                                             <div class="unit-left">
                                                 <div class="icon icon-xxs text-middle mdi mdi-email-outline text-primary"></div>
                                             </div>
-                                            <div class="unit-body"><a href="mailto:#" class="text-dark">info@demolink.org</a></div>
+                                            <div class="unit-body"><a href="mailto:#" class="text-dark">miaguilera@userena.cl</a></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="offset-top-60">
+                                    <h6>Sitio Facultad</h6>
+                                    <hr class="text-subline">
+                                    <div class="offset-top-20">
+                                        <div class="unit unit-horizontal unit-spacing-xxs p">
+                                            <div class="unit-left">
+                                                <div class="icon icon-xxs text-middle mdi mdi-email-outline text-primary"></div>
+                                            </div>
+                                            <div class="unit-body">
+                                              <a href="http://fciencias.userena.cl" target="_blank" class="text-dark">fciencias.userena.cl</a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
