--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -1,13 +1,46 @@
-{% extends "clinica/base.html" %}
-{% load staticfiles %}
+{% extends "carrera/base.html" %} 
+{% load staticfiles %} 
 
-{% block title %}Home{% endblock %}
+{% block title %}Home{% endblock %} 
 
 {% block content %}
 <!-- What makes us different-->
+<!--What makes us different-->
 <section class="section-98 section-sm-110">
     <div class="shell">
-        <h3>Index Carrera</h3>
+        <h3>Marcamos la diferencia</h3>
+        <hr class="divider divider-lg bg-primary">
+        <div class="range offset-top-60">
+            <div class="cell-md-4">
+                <div class="icon icon-xlg icon-rect icon-default icon-pills-xl"></div>
+                <h5 class="text-bold text-primary">Ciencia, humanidad y tecnología</h5>
+                <p>La carrera de Odontología tiene una fuerte formación científica, humanista y tecnológica.</p>
+            </div>
+            <div class="cell-md-4 offset-top-50 offset-md-top-0">
+                <div class="icon icon-xlg icon-rect icon-default icon-doctor-xl"></div>
+                <h5 class="text-bold text-primary">Responsabilidad Social</h5>
+                <p>Sólidos principios éticos y responsabilidad social</p>
+            </div>
+            <div class="cell-md-4 offset-top-50 offset-md-top-0">
+                <div class="icon icon-xlg icon-rect icon-default icon-medical-car-xl"></div>
+                <h5 class="text-bold text-primary">Ciencias biomédicas</h5>
+                <p>Énfasis en las ciencias biomédicas básicas, técnicas y clínicas para entender las condiciones normales y patologías</p>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Call to action-->
+<section class="rd-parallax">
+    <div data-speed="0.2" data-type="media" data-url="{% static 'images/backgrounds/background-03-1920x610.jpg' %}" class="rd-parallax-layer"></div>
+    <div data-speed="0" data-type="html" class="rd-parallax-layer section-98 section-sm-110 context-dark">
+        <div class="shell text-center">
+            <h2></h2>
+            <p class="offset-top-30 text-gray-light">El Cirujano Dentista puede ejercer libremente la profesión en atención clínica
+                <br class="veil reveal-md-block"> de pacientes en el ámbito público y privado, área urbana y rural, redes asistenciales de atención primaria y nivel secundario.
+            </p>
+            <div class="offset-top-30"><a href="#" class="btn btn-ellipse btn-java">Admisión</a></div>
+        </div>
     </div>
 </section>
 {% endblock %}
+
