se corrige nombre de bread cumps de template galeria

--- a/web/templates/clinica/galeria.html
+++ b/web/templates/clinica/galeria.html
@@ -37,10 +37,10 @@
             <!-- Modern Breadcrumbs-->
             <section class="breadcrumb-modern context-dark text-md-left">
                 <div class="shell section-34 section-md-top-110 section-md-bottom-41">
-                    <h1>Equipo</h1>
+                    <h1>Galería</h1>
                     <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
                         <li><a href="/clinica">Clínica</a></li>
-                        <li>Equipo</li>
+                        <li>Galería</li>
                     </ul>
                 </div>
             </section>
