e actualiza Swiper con frase propuesta por Hury

--- a/web/templates/carrera/swiper.html
+++ b/web/templates/carrera/swiper.html
@@ -17,7 +17,7 @@
                 <div class="swiper-slide-caption">
                     <div class="shell bg-dark section-41 section-sm-98 section-md-bottom-167">
                         <h2>Mejor equipamiento <br class="veil reveal-md-block"> pedagógico</h2>
-                        <h5 class="veil reveal-md-block">Dispondrás de herramientas que te permitirás<br class="veil reveal-md-block"> optimizar tu aprendizaje.</h5>
+                        <h5 class="veil reveal-md-block">Con todas las herramientas que te permitirán <br class="veil reveal-md-block"> optimizar tu aprendizaje</h5>
                         <a href="#" class="btn btn-ellipse btn-java offset-top-24">Equipamiento</a>
                     </div>
                 </div>
