Se corrigen detalles en index de clínica

--- a/web/templates/clinica/index.html
+++ b/web/templates/clinica/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="cell-md-4 offset-top-50 offset-md-top-0">
                 <div class="icon icon-xlg icon-rect icon-default icon-doctor-xl"></div>
-                <h5 class="text-bold text-primary">2 Pabellónes de Cirugía Menor</h5>
+                <h5 class="text-bold text-primary">2 Pabellones de Cirugía Menor</h5>
             </div>
         </div>
     </div>
