--- a/web/templates/clinica/swiper.html
+++ b/web/templates/clinica/swiper.html
@@ -6,7 +6,7 @@
                 <div class="swiper-slide-caption">
                     <div class="shell bg-dark section-41 section-sm-98 section-md-bottom-167">
                         <h2>Infraestructura de<br class="veil reveal-md-block"> última tecnología</h2>
-                        <h5 class="veil reveal-md-block">Te entregamos la infraestructura odontológica <br class="veil reveal-md-block"> más avanzada de la región.</h5>
+                        <h5 class="veil reveal-md-block">Te entregamos la infraestructura odontológica <br class="veil reveal-md-block"> más avanzada de la región</h5>
                         <a href="/clinica/galeria" class="btn btn-ellipse btn-java offset-top-24">Galeria Fotos</a>
                     </div>
                 </div>
