Nuevas sugerencia de Hury

--- a/web/templates/carrera/swiper.html
+++ b/web/templates/carrera/swiper.html
@@ -5,7 +5,7 @@
             <div class="swiper-caption">
                 <div class="swiper-slide-caption">
                     <div class="shell bg-dark section-41 section-sm-98 section-md-bottom-167">
-                        <h2>Creando nuevos profesionales <br class="veil reveal-md-block">en el área de la salud</h2>
+                        <h2>Formando nuevos profesionales <br class="veil reveal-md-block">en el área de la salud</h2>
                         <h5 class="veil reveal-md-block">Para una mejor calidad de vida en la Región de Coquimbo</h5>
                         <a href="/carrera/plan" class="btn btn-ellipse btn-java offset-top-24">Plan de Estudios</a>
                     </div>
