Se agrega enlace para "quienes somos" y se cambia título de inicio

--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -1,7 +1,7 @@
 {% extends "carrera/base.html" %} 
 {% load staticfiles %} 
 
-{% block title %}Home{% endblock %} 
+{% block title %}Odontología{% endblock %} 
 
 {% block content %}
 <!-- What makes us different-->
