--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -37,7 +37,7 @@
                         <!-- RD Navbar Nav-->
                         <ul class="rd-navbar-nav">
                             <li class="{% active_menu '^[/]$' %}"><a href="/"><span>Inicio</span></a></li>
-                            <li class="{% active_menu '^(/carrera/)(or|ob|pl|pe)([a-z]+)' %}"><a href="#"><span>Quienes Somos</span></a>
+                            <li class="{% active_menu '^(/carrera/)(or|ob|pl|pe)([a-z]+)' %}"><a href="/carrera/organigrama"><span>Quienes Somos</span></a>
                                 <ul class="rd-navbar-dropdown">
                                     <li><a href="/carrera/organigrama"><span class="text-middle">Organigrama</span></a>
                                     <li><a href="/carrera/objetivos"><span class="text-middle">Misión - Visión</span></a>
