--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -16,7 +16,7 @@
                 <p>La carrera de Odontología tiene una fuerte formación científica, humanista y tecnológica.</p>
             </div>
             <div class="cell-md-4 offset-top-50 offset-md-top-0">
-                <div class="icon icon-xlg icon-rect icon-default icon-doctor-xl"></div>
+                <div class="icon icon-xlg icon-rect icon-default icon-compromiso-xl"></div>
                 <h5 class="text-bold text-primary">Responsabilidad Social</h5>
                 <p>Sólidos principios éticos y responsabilidad social.</p>
             </div>
