se agrega enlace a lista de docentes en menú

--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -41,6 +41,7 @@
                                 <ul class="rd-navbar-dropdown">
                                     <li><a href="/carrera/organigrama"><span class="text-middle">Organigrama</span></a>
                                     <li><a href="/carrera/objetivos"><span class="text-middle">Misión - Visión</span></a>
+                                    <li><a href="/carrera/docentes"><span class="text-middle">Académicos</span></a></li>
                                     <li><a href="/carrera/plan"><span class="text-middle">Plan Estudios</span></a></li>
                                     <li><a href="/carrera/perfile"><span class="text-middle">Perfil Egresado</span></a></li>
                                     <li><a href="/carrera/perfilp"><span class="text-middle">Perfil Profesional</span></a></li>
