se sube nueva imagen para admisión

--- a/web/templates/carrera/admision.html
+++ b/web/templates/carrera/admision.html
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="cell-lg-4 offset-top-0 veil reveal-lg-block">
-                    <img src="{% static 'images/pages/faq-01-426x582.jpg' %}" width="426" height="582" alt="" class="veil reveal-md-inline-block">
+                    <img src="{% static 'images/carrera/admision.jpg' %}" width="426" height="582" alt="" class="veil reveal-md-inline-block">
                 </div>
             </div>
         </div>
