Se cambia la imagen de index admision

--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -30,14 +30,14 @@
 </section>
 <!-- Call to action-->
 <section class="rd-parallax">
-    <div data-speed="0.2" data-type="media" data-url="{% static 'images/backgrounds/background-03-1920x610.jpg' %}" class="rd-parallax-layer"></div>
+    <div data-speed="0.2" data-type="media" data-url="{% static 'images/backgrounds/background-11-1920x610.jpg' %}" class="rd-parallax-layer"></div>
     <div data-speed="0" data-type="html" class="rd-parallax-layer section-98 section-sm-110 context-dark">
         <div class="shell text-center">
             <h2></h2>
             <p class="offset-top-30 text-gray-light">El Cirujano Dentista puede ejercer libremente la profesión en atención clínica
                 <br class="veil reveal-md-block"> de pacientes en el ámbito público y privado, área urbana y rural, redes asistenciales de atención primaria y nivel secundario.
             </p>
-            <div class="offset-top-30"><a href="#" class="btn btn-ellipse btn-java">Admisión</a></div>
+            <div class="offset-top-30"><a href="/carrera/admision" class="btn btn-ellipse btn-java">Admisión</a></div>
         </div>
     </div>
 </section>
