--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -13,7 +13,7 @@
                     </address>
                 </div>
                 <!--Navbar Brand-->
-                <div class="rd-navbar-brand veil reveal-md-inline-block"><a href="index.html"><img width='316' height='57' class='img-responsive' src='{% static 'images/logo.png' %}' alt=''/></a></div>
+                <div class="rd-navbar-brand veil reveal-md-inline-block"><a href="index.html"><img width='316' height='57' class='img-responsive' src="{% static 'images/logo.svg' %}" alt='logo'/></a></div>
                 <div>
                     <address class="contact-info reveal-sm-inline-block text-left">
                         <div class="p unit unit-horizontal unit-spacing-xs">
@@ -28,7 +28,7 @@
                 <!-- RD Navbar Toggle-->
                 <button data-rd-navbar-toggle=".rd-navbar, .rd-navbar-nav-wrap" class="rd-navbar-toggle"><span></span></button>
                 <!--Navbar Brand-->
-                <div class="rd-navbar-brand veil-md"><a href="index.html"><img width='316' height='57' class='img-responsive' src='{% static 'images/logo-dark.png' %}' alt=''/></a></div>
+                <div class="rd-navbar-brand veil-md"><a href="index.html"><img width='316' height='57' class='img-responsive' src="{% static 'images/logo.svg' %}" alt='logo'/></a></div>
                 <button data-rd-navbar-toggle=".rd-navbar, .rd-navbar-top-panel" class="rd-navbar-top-panel-toggle"><span></span></button>
             </div>
             <div class="rd-navbar-menu-wrap">
