--- a/web/templates/clinica/footer.html
+++ b/web/templates/clinica/footer.html
@@ -6,7 +6,7 @@
                 <div class="range range-md-justify range-md-middle">
                     <div class="cell-md-4 cell-md-push-1 text-md-left">
                         <!-- Footer brand-->
-                        <div class="footer-brand reveal-inline-block"><a href="index.html"><img width='316' height='57' class='img-responsive' src="{% static 'images/logo-dark.png' %}" alt=''/></a></div>
+                        <div class="footer-brand reveal-inline-block"><a href="index.html"><img width='316' height='57' class='img-responsive' src="{% static 'images/logo-dark.svg' %}" alt=''/></a></div>
                     </div>
                     <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-3 text-md-right">
                         <ul class="list-inline">
