--- a/web/templates/carrera/contacto.html
+++ b/web/templates/carrera/contacto.html
@@ -89,7 +89,7 @@
                                                 <div class="icon icon-xxs text-middle mdi mdi-map-marker text-primary"></div>
                                             </div>
                                             <div class="unit-body">
-                                                <p><a href="#" class="text-gray-dark">Campus Ignacio Domeyko.<br>Benavente 980, La Serena.</a></p>
+                                                <p>Avenida Juan Cisternas N°1015, La Serena.</p>
                                             </div>
                                         </div>
                                     </div>
