--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -13,7 +13,7 @@
                     </address>
                 </div>
                 <!--Navbar Brand-->
-                <div class="rd-navbar-brand veil reveal-md-inline-block"><a href="index.html"><img width='316' height='57' class='img-responsive' src='{% static 'images/logo.png' %}' alt=''/></a></div>
+                <div class="rd-navbar-brand veil reveal-md-inline-block"><a href="/"><img width='316' height='57' class='img-responsive' src='{% static 'images/logo.png' %}' alt=''/></a></div>
                 <div>
                     <address class="contact-info reveal-sm-inline-block text-left">
                         <div class="p unit unit-horizontal unit-spacing-xs">
