--- a/web/templates/carrera/contacto.html
+++ b/web/templates/carrera/contacto.html
@@ -7,7 +7,7 @@
     <div class="shell section-34 section-md-top-110 section-md-bottom-41">
         <h1>Contáctenos</h1>
         <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="/">Inicio</a></li>
             <li>Contacto</li>
         </ul>
     </div>
