Se actualiza pagina de error desde servidor

--- a/web/templates/503.html
+++ b/web/templates/503.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Oswald%7CLato:400italic,400,700">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="../static/css/style.css">
     <!--[if lt IE 10]>
     <div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <script src="js/html5shiv.min.js"></script>
@@ -28,7 +28,7 @@
             <div class="one-page">
                 <div class="one-page-header">
                     <!--Navbar Brand-->
-                    <div class="rd-navbar-brand"><a href="index.html"><img width='316' height='57' class='img-responsive' src='images/logo.png' alt=''/></a></div>
+                    <div class="rd-navbar-brand"><a href="index.html"><img width='316' height='57' class='img-responsive' src='../static/images/logo.svg' alt=''/></a></div>
                 </div>
                 <!-- 505-->
                 <section>
@@ -41,7 +41,7 @@
                                         <div class="cell-lg-6">
                                             <div class="text-extra-big text-black opacity-02 font-accent">503</div>
                                             <p class="offset-top-50">Lo sentimos, no estamos en línea ahora para mejorar nuestro sitio. Vuelve más tarde y comprueba lo que hemos estado haciendo.</p>
-                                            <div class="group offset-top-30"><a href="index.html" class="btn btn-ellipse btn-java">volver a inicio</a></div>
+                                            <div class="group offset-top-30"><a href="/" class="btn btn-ellipse btn-java">volver a inicio</a></div>
                                         </div>
                                     </div>
                                 </div>
@@ -56,8 +56,8 @@
         </main>
     </div>
     <!-- Java script-->
-    <script type="text/javascript" src="{% static 'js/core.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
+    <script type="text/javascript" src="../static/js/core.min.js"></script>
+    <script type="text/javascript" src="../static/js/script.js"></script>
 </body>
 
 </html>
