Se actualiza template

--- a/template/site/index.html
+++ b/template/site/index.html
@@ -130,8 +130,8 @@
                             <div class="swiper-slide-caption">
                                 <div class="shell bg-dark section-41 section-sm-98 section-md-bottom-167">
                                     <h2>Creando nuevos profesionales <br class="veil reveal-md-block">en el área de la salud</h2>
-                                    <h5 class="veil reveal-md-block">Para una mejor calidad de vida en la Región de Coquimbo
-                </h5><a href="#" class="btn btn-ellipse btn-java offset-top-24">Programa de Estudios</a>
+                                    <h5 class="veil reveal-md-block">Para una mejor calidad de vida en la Región de Coquimbo</h5>
+                                    <a href="#" class="btn btn-ellipse btn-java">Programa de Estudios</a>
                                 </div>
                             </div>
                         </div>
@@ -140,10 +140,9 @@
                         <div class="swiper-caption">
                             <div class="swiper-slide-caption">
                                 <div class="shell bg-dark section-41 section-sm-98 section-md-bottom-167">
-                                    <h2>Infraestructura de<br class="veil reveal-md-block"> última tecnología
-                    </h2>
-                                    <h5 class="veil reveal-md-block">Te entregamos la infraestructura odontológica <br class="veil reveal-md-block"> más avanzada de la región.
-                    </h5><a href="#" class="btn btn-ellipse btn-java offset-top-24">Infraestructura</a>
+                                    <h2>Infraestructura de<br class="veil reveal-md-block">última tecnología</h2>
+                                    <h5 class="veil reveal-md-block">Te entregamos la infraestructura odontológica <br class="veil reveal-md-block"> más avanzada de la región.</h5>
+                                    <a href="#" class="btn btn-ellipse btn-java">Infraestructura</a>
                                 </div>
                             </div>
                         </div>
@@ -152,10 +151,9 @@
                         <div class="swiper-caption">
                             <div class="swiper-slide-caption">
                                 <div class="shell bg-dark section-41 section-sm-98 section-md-bottom-167">
-                                    <h2>Mejor equipamiento <br class="veil reveal-md-block"> pedagógico
-                    </h2>
-                                    <h5 class="veil reveal-md-block">Dispondrás de herramientas que te permitirás<br class="veil reveal-md-block"> optimizar tu aprendizaje.
-                    </h5><a href="#" class="btn btn-ellipse btn-java offset-top-24">Equipamiento</a>
+                                    <h2>Mejor equipamiento <br class="veil reveal-md-block">pedagógico</h2>
+                                    <h5 class="veil reveal-md-block">Dispondrás de herramientas que te permitirás<br class="veil reveal-md-block"> optimizar tu aprendizaje.</h5>
+                                    <a href="#" class="btn btn-ellipse btn-java">Equipamiento</a>
                                 </div>
                             </div>
                         </div>
