--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="cell-md-4 offset-top-50 offset-md-top-0">
                 <div class="icon icon-xlg icon-rect icon-default icon-compromiso-xl"></div>
-                <h5 class="text-bold text-primary">Responsabilidad Social</h5>
+                <h5 class="text-bold text-primary">Responsabilidad social</h5>
                 <p>Sólidos principios éticos y responsabilidad social.</p>
             </div>
             <div class="cell-md-4 offset-top-50 offset-md-top-0">
@@ -30,7 +30,7 @@
 </section>
 <!-- Call to action-->
 <section class="rd-parallax">
-    <div data-speed="0.2" data-type="media" data-url="{% static 'images/backgrounds/background-11-1920x610.jpg' %}" class="rd-parallax-layer"></div>
+    <div data-speed="0.2" data-type="media" data-url="{% static 'images/backgrounds/background-12-1920x610.jpg' %}" class="rd-parallax-layer"></div>
     <div data-speed="0" data-type="html" class="rd-parallax-layer section-98 section-sm-110 context-dark">
         <div class="shell text-center">
             <h2 style="text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.4);">Nuestro prestigio... consecuencia de un trabajo comprometido y de excelencia</h2>
